# Competitive-Intelligence-Engine

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.prod  README.md  compose.yaml  main.py  pyproject.toml
app/: config.py  main.py  runtime_settings.py
app/adapters/: apify_client.py  apify_enrichment.py  dspy_analysis.py  greenhouse.py  lever.py  openai_analysis.py  rss.py
app/auth/: __init__.py  audit.py  limits.py  security.py  store.py  supabase_store.py
benchmarks/: domains.json
scripts/: cleanup_expired_jobs.py  generate_golden_baselines.py  generate_report.py  live_smoke.py  run_benchmark.py  score_golden_benchmarks.py  validate_golden_benchmarks.py
static/: styles.css
templates/: base.html
tests/: conftest.py  test_ai_operations.py  test_apify_adapters.py  test_apify_client.py  test_apify_workflow.py  test_app_static.py  test_auth_routes.py  test_auth_store.py  test_benchmark_scorer.py  test_business_normalizer.py  test_compose_config.py  test_config.py  test_crawl_plan.py  test_credits.py  test_discovery.py  test_domain.py  test_dspy_analysis.py  test_evidence_pdf.py  test_executive_view.py  test_extraction_schema.py  test_failure_messages.py  test_golden_scorer.py  test_gtm_business_links.py  test_gtm_facts.py  test_http.py  test_intelligence_builder.py  test_job_routes.py  test_job_store.py  test_lazy_imports.py  test_openai_analysis.py  test_page_extraction.py  test_pdf.py  test_profile_builder.py  test_rendered.py  test_robots.py  test_rss.py  test_shopify.py  test_sitemap.py  test_structured_data.py  test_supabase_auth.py  (+4 more)
(+80 files in other folders)
