[project]
name = "competitor-brief"
version = "0.1.0"
description = "Python-first competitor research snapshot tool."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.4",
    "openai>=1.68.0",
    "playwright>=1.60.0",
    "psycopg[binary,pool]>=3.2.0",
    "pydantic>=2.8.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.1",
    "reportlab>=4.5.1",
    "pdfplumber>=0.11.9",
    "pypdf>=6.13.1",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["docs*", "tests*", "static*", "templates*"]
